[gd_scene load_steps=3 format=3 uid="uid://btje00jyp5xy6"]

[ext_resource type="Script" path="res://Scripts/debug.gd" id="1_eypsk"]
[ext_resource type="PackedScene" uid="uid://bslb1y7xsj8kg" path="res://Scenes/splash_screen.tscn" id="1_r2wru"]

[node name="GameplayUI" type="CanvasLayer"]

[node name="SplashScreen" parent="." instance=ExtResource("1_r2wru")]

[node name="Debug" type="GridContainer" parent="."]
visible = false
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_eypsk")

[node name="XVelocity" type="Label" parent="Debug"]
layout_mode = 2
text = "X Velocity:"

[node name="ZVelocity" type="Label" parent="Debug"]
layout_mode = 2
text = "Z Velocity:"

[node name="Speed" type="Label" parent="Debug"]
layout_mode = 2

[node name="RelativeSpeed" type="Label" parent="Debug"]
layout_mode = 2

[node name="Direction" type="Label" parent="Debug"]
layout_mode = 2
text = "Direction:"

[node name="Friction" type="Label" parent="Debug"]
layout_mode = 2
text = "Friction:"

[node name="OnTheFloor" type="Label" parent="Debug"]
layout_mode = 2
text = "On The Floor:"

[node name="LeftWall" type="Label" parent="Debug"]
layout_mode = 2
text = "Left Wall:"

[node name="RightWall" type="Label" parent="Debug"]
layout_mode = 2
text = "Right Wall:"

[node name="WallNormal" type="Label" parent="Debug"]
layout_mode = 2
